# authd

./: .gitignore  .golangci.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  authd.pb.go  authd.proto  authd_grpc.pb.go  generate.go  generate_proto.go  go.mod  go.sum  gotestcov
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: dpkg-exclude-locales-and-manpages.sh
.github/workflows/: auto-updates.yaml  automatic-doc-checks.yml  build-deb.yaml  cla-check.yaml  dependabot-post-steps.yaml  git-fixup.yaml  git.yml  gotestfmt.yaml  gotestsum.yaml  markdown-style-checks.yml  qa.yaml  sphinx-python-dependency-build-checks.yml  sync-edge-branch.yaml  sync-gh-jira.yaml  tics-run.yaml  validate-dependabot.yaml
api/types/: auth_mode.go  helpers.go  layout.go  session_mode.go
behave-tests/: .gitignore  apparmor-prompting.feature  environment.py  gdm.feature  main-test-vm.xml  run-tests
behave-tests/helpers/: accessible.py  checkpoint.py  checkpoints.py  executil.py  msentraid.py  retry.py  screen.py  snapshot.py  util.py  vm.py
behave-tests/steps/: common.py  steps.py
behave-tests/systemd/: proxy-to-behave-test-vm-a11y-bus.service  proxy-to-behave-test-vm-a11y-bus.socket
brokers/auth/: authmode.go  generate.go  mode.go  mode_test.go
brokers/layouts/: generate.go  layouts.go  layouts_test.go  uilayout.go
cmd/authctl/: main.go  main_test.go
cmd/authd/: integrationtests.go  main.go  main_test.go
debian/: authd-example-broker.examples  authd-example-broker.install  authd-example-broker.installer.sh  authd-example-broker.postinst  authd-example-broker.service  authd-example-broker.service.in  authd.apport  authd.docs  authd.gdm-authd.pam  authd.gdm-authd.pam.in  authd.install  authd.lintian-overrides  authd.postinst  authd.postrm  authd.service  authd.service.in  authd.socket  changelog  control  copyright  dirs  gbp.conf  get-backported-go-path.sh  get-depends-go-bin-path.sh  install  not-installed  postinst  postrm  prerm  rules  vendor-rust.sh
debian/authd-config/: authd.yaml
debian/pam-configs/: authd  authd.in
debian/source/: lintian-overrides  options
debian/tests/: control  run-tests.sh
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  conf.py  generate.go  index.md  requirements.txt
docs/.sphinx/: spellingcheck.yaml
docs/explanation/: index.md  (+3 more)
examplebroker/: ExampleBroker.conf  broker.go  com.ubuntu.auth.ExampleBroker.xml  com.ubuntu.authd.ExampleBroker.conf  com.ubuntu.authd.ExampleBroker.service  com.ubuntu.authd.ExampleBroker.xml  dbus.go  users.go
log/: handler.go  journal.go  log.go  log_test.go
nss/: Cargo.toml  build.rs
nss/integration-tests/: helper_test.go  integration_test.go  nss_test.go
nss/integration-tests/pid_abuser/: pidabuser.go
nss/integration-tests/testdata/TestIntegration/golden/: check_user_with_broker_if_not_found_in_cache  get_all_entries_from_passwd  get_entry_from_passwd_by_id  get_entry_from_shadow_by_name
nss/integration-tests/testdata/db/: invalid_entry_in_groupByID.db.yaml  invalid_entry_in_userByID.db.yaml  multiple_users_and_groups.db.yaml  pam_unix_non_existent.db.yaml
nss/integration-tests/testdata/golden/TestIntegration/: Check_user_with_broker_if_not_found_in_cache  Check_user_with_broker_if_not_found_in_db  Check_user_with_broker_if_not_found_in_db_in_upper_case  Get_all_entries_from_group  Get_all_entries_from_shadow  Get_entry_from_group_by_id  Get_entry_from_group_by_name
nss/src/: coverage.go  db_override.c  lib.rs
nss/src/client/: mod.rs
nss/src/group/: mod.rs
nss/src/logs/: mod.rs
nss/src/passwd/: coverage.go  mod.rs
nss/src/shadow/: mod.rs
pam/: .gitignore  Hacking.md  authentication.go  authmodeselection.go  authorization.go  brokerselection.go  button.go  commands.go  formmodel.go  generate.go  generate.sh  generate_debug.go  main-cli.go  main-exec.go  model.go  newpasswordmodel.go  pam-utils.c  pam-utils.h  pam.go  pam_module.go  pam_module_debug.go  pam_test.go  qrcodemodel.go  return.go  textinputmodel.go  userselection.go  utils.go  utils_c.go
shell-completion/: generate.go
systemd/: authd.service  authd.socket
tools/: generate-proto.sh  go.mod  go.sum  gotestfmt  tools.go
vendor_rust/addr2line/: .cargo-checksum.json  Cargo.toml
vendor_rust/backtrace/: .cargo-checksum.json  Cargo.toml
vendor_rust/bumpalo/: .cargo-checksum.json  Cargo.toml
vendor_rust/gimli/: .cargo-checksum.json  Cargo.toml
vendor_rust/io-uring/: .cargo-checksum.json  Cargo.toml
vendor_rust/js-sys/: .cargo-checksum.json  Cargo.toml
vendor_rust/object/: .cargo-checksum.json  Cargo.toml
vendor_rust/r-efi/: .cargo-checksum.json  Cargo.toml
vendor_rust/rustc-demangle/: .cargo-checksum.json  Cargo.toml
vendor_rust/serde_derive/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasi/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasi-0.11.1+wasi-snapshot-preview1/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasm-bindgen/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasm-bindgen-backend/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasm-bindgen-macro/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasm-bindgen-macro-support/: .cargo-checksum.json  Cargo.toml
vendor_rust/wasm-bindgen-shared/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-core/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-interface/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-link/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-result/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-strings/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-targets/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows-targets-0.52.6/: Cargo.toml
vendor_rust/windows_aarch64_msvc/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows_i686_gnu/: .cargo-checksum.json  Cargo.toml
vendor_rust/windows_x86_64_msvc/: .cargo-checksum.json  Cargo.toml
vendor_rust/wit-bindgen-rt/: .cargo-checksum.json  Cargo.toml
(+1888 files in other folders)
