[package]
name = "nss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "nss_authd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Allows to override the socket path used to connect to the grpc server, through the AUTHD_NSS_SOCKET env variable.
custom_socket = []
integration_tests = []

[dependencies]
libnss = "0.8.0"
libc = "0.2.162"
tonic = "0.12.3"
prost = "0.13.3"
rustix = { version = "0.38.40", features = ["use-libc"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
log = "0.4.22"
simple_logger = {version = "5.0.0", features = ["stderr"]}
syslog = "7.0.0"
ctor = "0.2.8"
procfs = "0.17.0"
hyper-util = "0.1.10"

[build-dependencies]
# We need to pin tonic-build to 0.11.* for now until https://github.com/hyperium/tonic/issues/1909 is fixed.
tonic-build = "0.11.*"
cc = "1.2.1"
