[dependencies.alloc]
optional = true
package = "rustc-std-workspace-alloc"
version = "1.0.0"

[dependencies.compiler_builtins]
optional = true
version = "0.1.2"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[dependencies.cpp_demangle]
default-features = false
features = ["alloc"]
optional = true
version = "0.4"

[dependencies.fallible-iterator]
default-features = false
optional = true
version = "0.3.0"

[dependencies.gimli]
default-features = false
features = ["read"]
version = "0.28.0"

[dependencies.memmap2]
optional = true
version = "0.5.5"

[dependencies.object]
default-features = false
features = ["read"]
optional = true
version = "0.32.0"

[dependencies.rustc-demangle]
optional = true
version = "0.1"

[dependencies.smallvec]
default-features = false
optional = true
version = "1"

[dev-dependencies.backtrace]
version = "0.3.13"

[dev-dependencies.clap]
features = ["wrap_help"]
version = "4.3.21"

[dev-dependencies.findshlibs]
version = "0.10"

[dev-dependencies.libtest-mimic]
version = "0.6.1"

[dev-dependencies.typed-arena]
version = "2"

[features]
default = ["rustc-demangle", "cpp_demangle", "std-object", "fallible-iterator", "smallvec", "memmap2"]
rustc-dep-of-std = ["core", "alloc", "compiler_builtins", "gimli/rustc-dep-of-std"]
std = ["gimli/std"]
std-object = ["std", "object", "object/std", "object/compression", "gimli/endian-reader"]

[package]
categories = ["development-tools::debugging"]
description = "A cross-platform symbolication library written in Rust, using `gimli`"
documentation = "https://docs.rs/addr2line"
edition = "2018"
exclude = ["/benches/*", "/fixtures/*", ".github"]
keywords = ["DWARF", "debug", "elf", "symbolicate", "atos"]
license = "Apache-2.0 OR MIT"
name = "addr2line"
readme = "./README.md"
repository = "https://github.com/gimli-rs/addr2line"
rust-version = "1.65"
version = "0.21.0"

[profile.bench]
codegen-units = 1
debug = true

[profile.release]
debug = true
