[dependencies.alloc]
optional = true
package = "rustc-std-workspace-alloc"
version = "1.0.0"

[dependencies.clap]
features = ["wrap_help"]
optional = true
version = "4.3.21"

[dependencies.compiler_builtins]
optional = true
version = "0.1.2"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[dependencies.cpp_demangle]
default-features = false
features = ["alloc"]
optional = true
version = "0.4"

[dependencies.fallible-iterator]
default-features = false
optional = true
version = "0.3.0"

[dependencies.gimli]
default-features = false
features = ["read"]
version = "0.31.1"

[dependencies.memmap2]
optional = true
version = "0.9.4"

[dependencies.object]
default-features = false
features = ["read", "compression"]
optional = true
version = "0.36.0"

[dependencies.rustc-demangle]
optional = true
version = "0.1"

[dependencies.smallvec]
default-features = false
optional = true
version = "1"

[dependencies.typed-arena]
optional = true
version = "2"

[dev-dependencies.backtrace]
version = "0.3.13"

[dev-dependencies.findshlibs]
version = "0.10"

[dev-dependencies.libtest-mimic]
version = "0.7.2"

[features]
all = ["bin"]
bin = ["loader", "rustc-demangle", "cpp_demangle", "fallible-iterator", "smallvec", "dep:clap"]
cargo-all = []
default = ["rustc-demangle", "cpp_demangle", "loader", "fallible-iterator", "smallvec"]
loader = ["std", "dep:object", "dep:memmap2", "dep:typed-arena"]
rustc-dep-of-std = ["core", "alloc", "compiler_builtins", "gimli/rustc-dep-of-std"]
std = ["gimli/std"]

[lib]
name = "addr2line"
path = "src/lib.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
categories = ["development-tools::debugging"]
description = "A cross-platform symbolication library written in Rust, using `gimli`"
documentation = "https://docs.rs/addr2line"
edition = "2018"
include = ["/CHANGELOG.md", "/Cargo.lock", "/Cargo.toml", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src"]
keywords = ["DWARF", "debug", "elf", "symbolicate", "atos"]
license = "Apache-2.0 OR MIT"
name = "addr2line"
readme = "README.md"
repository = "https://github.com/gimli-rs/addr2line"
rust-version = "1.65"
version = "0.24.2"

[profile.bench]
codegen-units = 1
debug = 2

[profile.release]
debug = 2
