[dependencies.cfg-if]
version = "1.0"

[dependencies.cpp_demangle]
default-features = false
features = ["alloc"]
optional = true
version = "0.4.0"

[dependencies.rustc-demangle]
version = "0.1.24"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dev-dependencies.libloading]
version = "0.8"

[features]
coresymbolication = []
dbghelp = []
default = ["std"]
dl_iterate_phdr = []
dladdr = []
kernel32 = []
libunwind = []
ruzstd = ["dep:ruzstd"]
serialize-serde = ["serde"]
std = []
unix-backtrace = []

[lib]
name = "backtrace"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = "allow"

[package]
authors = ["The Rust Project Developers"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
description = """
A library to acquire a stack trace (backtrace) at runtime in a Rust program.
"""
documentation = "https://docs.rs/backtrace"
edition = "2021"
exclude = ["/ci/"]
homepage = "https://github.com/rust-lang/backtrace-rs"
license = "MIT OR Apache-2.0"
name = "backtrace"
readme = "README.md"
repository = "https://github.com/rust-lang/backtrace-rs"
rust-version = "1.82.0"
version = "0.3.75"

[target.'cfg(any(windows, target_os = "cygwin"))'.dependencies.windows-targets]
version = "0.52.6"

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.addr2line]
default-features = false
version = "0.24.0"

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.libc]
default-features = false
version = "0.2.156"

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.miniz_oxide]
default-features = false
version = "0.8"

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.object]
default-features = false
features = ["read_core", "elf", "macho", "pe", "xcoff", "unaligned", "archive"]
version = "0.36.0"

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.ruzstd]
default-features = false
optional = true
version = "0.7.3"
