[dependencies.allocator-api2]
default-features = false
optional = true
version = "0.2.8"

[dependencies.serde]
optional = true
version = "1.0.171"

[dev-dependencies.blink-alloc]
version = "=0.3.1"

[dev-dependencies.criterion]
version = "0.3.6"

[dev-dependencies.quickcheck]
version = "1.0.3"

[dev-dependencies.rand]
version = "0.8.5"

[dev-dependencies.serde]
features = ["derive"]
version = "1.0.197"

[dev-dependencies.serde_json]
version = "1.0.115"

[features]
allocator_api = []
bench_allocator_api = ["allocator_api", "blink-alloc/nightly"]
boxed = []
collections = []
default = []
serde = ["dep:serde"]
std = []

[lib]
bench = false
name = "bumpalo"
path = "src/lib.rs"

[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["memory-management", "rust-patterns", "no-std"]
description = "A fast bump allocation arena for Rust."
documentation = "https://docs.rs/bumpalo"
edition = "2021"
exclude = ["/.github/*", "/benches", "/tests", "valgrind.supp", "bumpalo.png"]
license = "MIT OR Apache-2.0"
name = "bumpalo"
readme = "README.md"
repository = "https://github.com/fitzgen/bumpalo"
rust-version = "1.71.1"
version = "3.19.0"

[package.metadata.docs.rs]
all-features = true
