[dependencies.alloc]
optional = true
package = "rustc-std-workspace-alloc"
version = "1.0.0"

[dependencies.compiler_builtins]
optional = true
version = "0.1.2"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[dependencies.fallible-iterator]
default-features = false
optional = true
version = "0.3.0"

[dependencies.indexmap]
optional = true
version = "2.0.0"

[dependencies.stable_deref_trait]
default-features = false
optional = true
version = "1.1.0"

[dev-dependencies.test-assembler]
version = "0.1.3"

[features]
default = ["read-all", "write"]
endian-reader = ["read", "dep:stable_deref_trait"]
fallible-iterator = ["dep:fallible-iterator"]
read = ["read-core"]
read-all = ["read", "std", "fallible-iterator", "endian-reader"]
read-core = []
rustc-dep-of-std = ["dep:core", "dep:alloc", "dep:compiler_builtins"]
std = ["fallible-iterator?/std", "stable_deref_trait?/std"]
write = ["dep:indexmap"]

[lib]
name = "gimli"
path = "src/lib.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
categories = ["development-tools::debugging", "development-tools::profiling", "parser-implementations"]
description = "A library for reading and writing the DWARF debugging format."
documentation = "https://docs.rs/gimli"
edition = "2018"
include = ["/CHANGELOG.md", "/Cargo.toml", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src"]
keywords = ["DWARF", "debug", "ELF", "eh_frame"]
license = "MIT OR Apache-2.0"
name = "gimli"
readme = "README.md"
repository = "https://github.com/gimli-rs/gimli"
resolver = "2"
rust-version = "1.60"
version = "0.31.1"

[profile.bench]
codegen-units = 1
debug = 2
split-debuginfo = "packed"

[profile.test]
split-debuginfo = "packed"
