[build-dependencies.bindgen]
optional = true
version = "0.69"

[dependencies.bitflags]
version = "2"

[dependencies.cfg-if]
version = "1"

[dependencies.libc]
default-features = false
version = "0.2.98"

[dependencies.sc]
optional = true
version = "0.2"

[dev-dependencies.anyhow]
version = "1"

[dev-dependencies.slab]
version = "0.4"

[dev-dependencies.socket2]
version = "0.5"

[features]
direct-syscall = ["sc"]
io_safety = []
overwrite = ["bindgen"]

[lib]
name = "io_uring"
path = "src/lib.rs"

[package]
authors = ["quininer <quininer@live.com>"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["asynchronous", "network-programming", "filesystem"]
description = "The low-level `io_uring` userspace interface for Rust"
documentation = "https://docs.rs/io-uring"
edition = "2021"
homepage = "https://github.com/tokio-rs/io-uring"
license = "MIT OR Apache-2.0"
name = "io-uring"
readme = "README.md"
repository = "https://github.com/tokio-rs/io-uring"
rust-version = "1.63"
version = "0.7.10"
