[dependencies.once_cell]
default-features = false
version = "1.12"

[dependencies.wasm-bindgen]
default-features = false
version = "=0.2.100"

[features]
default = ["std"]
std = ["wasm-bindgen/std"]

[lib]
doctest = false
name = "js_sys"
path = "src/lib.rs"
test = false

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(js_sys_unstable_apis)"]
level = "warn"
priority = 0

[package]
authors = ["The wasm-bindgen Developers"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["wasm"]
description = """
Bindings for all JS global objects and functions in all JS environments like
Node.js and browsers, built on `#[wasm_bindgen]` using the `wasm-bindgen` crate.
"""
documentation = "https://docs.rs/js-sys"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "js-sys"
readme = "README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/js-sys"
rust-version = "1.57"
version = "0.3.77"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
