[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[features]
efiapi = []
examples = ["native"]
native = []
rustc-dep-of-std = ["core"]

[lib]
name = "r_efi"
path = "src/lib.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["embedded", "hardware-support", "no-std", "os"]
description = "UEFI Reference Specification Protocol Constants and Definitions"
edition = "2018"
homepage = "https://github.com/r-efi/r-efi/wiki"
keywords = ["boot", "efi", "firmware", "specification", "uefi"]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
name = "r-efi"
readme = "README.md"
repository = "https://github.com/r-efi/r-efi"
rust-version = "1.68"
version = "5.3.0"
