[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[features]
compiler_builtins = []
rustc-dep-of-std = ["core"]
std = []

[lib]
name = "rustc_demangle"
path = "src/lib.rs"

[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
description = """
Rust compiler symbol demangling.
"""
documentation = "https://docs.rs/rustc-demangle"
homepage = "https://github.com/rust-lang/rustc-demangle"
license = "MIT/Apache-2.0"
name = "rustc-demangle"
readme = "README.md"
repository = "https://github.com/rust-lang/rustc-demangle"
version = "0.1.26"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
