[dependencies.quote]
version = "1.0"

[dependencies.wasm-bindgen-macro-support]
version = "=0.2.100"

[dev-dependencies.trybuild]
version = "1.0"

[features]
strict-macro = ["wasm-bindgen-macro-support/strict-macro"]
xxx_debug_only_print_generated_code = []

[lib]
name = "wasm_bindgen_macro"
path = "src/lib.rs"
proc-macro = true

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[package]
authors = ["The wasm-bindgen Developers"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
description = """
Definition of the `#[wasm_bindgen]` attribute, an internal dependency
"""
documentation = "https://docs.rs/wasm-bindgen"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-macro"
readme = "README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro"
rust-version = "1.57"
version = "0.2.100"
