[package]
authors = ["The wasm-bindgen Developers"]
description = """
Shared support between wasm-bindgen and wasm-bindgen cli, an internal
dependency.
"""
documentation = "https://docs.rs/wasm-bindgen-shared"
edition = "2018"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-shared"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/shared"
resolver = "2"
rust-version = "1.57"
version = "0.2.92"
