[dependencies.cfg-if]
version = "1.0.0"

[dependencies.once_cell]
default-features = false
version = "1.12"

[dependencies.rustversion]
optional = true
version = "1.0"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_json]
optional = true
version = "1.0"

[dependencies.wasm-bindgen-macro]
version = "=0.2.100"

[dev-dependencies.once_cell]
version = "1"

[features]
default = ["std", "msrv"]
enable-interning = ["std"]
gg-alloc = []
msrv = ["rustversion"]
serde-serialize = ["serde", "serde_json", "std"]
spans = []
std = []
strict-macro = ["wasm-bindgen-macro/strict-macro"]
xxx_debug_only_print_generated_code = ["wasm-bindgen-macro/xxx_debug_only_print_generated_code"]

[lib]
name = "wasm_bindgen"
path = "src/lib.rs"
test = false

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(wasm_bindgen_unstable_test_coverage)"]
level = "warn"
priority = 0

[package]
authors = ["The wasm-bindgen Developers"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["wasm"]
description = """
Easy support for interacting between JS and Rust.
"""
documentation = "https://docs.rs/wasm-bindgen"
edition = "2021"
homepage = "https://rustwasm.github.io/"
include = ["/build.rs", "/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen"
readme = "README.md"
repository = "https://github.com/rustwasm/wasm-bindgen"
rust-version = "1.57"
version = "0.2.100"

[package.metadata.docs.rs]
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.paste]
version = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.serde_derive]
version = "1.0"
