[dependencies.windows-implement]
default-features = false
version = "0.60.0"

[dependencies.windows-interface]
default-features = false
version = "0.59.1"

[dependencies.windows-link]
default-features = false
version = "0.1.1"

[dependencies.windows-result]
default-features = false
version = "0.3.4"

[dependencies.windows-strings]
default-features = false
version = "0.4.2"

[features]
default = ["std"]
std = ["windows-result/std", "windows-strings/std"]

[lib]
name = "windows_core"
path = "src/lib.rs"

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.rust.rust_2018_idioms]
level = "warn"
priority = -1

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(windows_raw_dylib, windows_slim_errors)"]
level = "warn"
priority = 0

[package]
authors = ["Microsoft"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
categories = ["os::windows-apis"]
description = "Core type support for COM and Windows"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "windows-core"
readme = "readme.md"
repository = "https://github.com/microsoft/windows-rs"
rust-version = "1.74"
version = "0.61.2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
